# cli_helper

./: .gitignore  README.md  mkdocs.yml  noxfile.py  poetry.toml  pyproject.toml
cli_example/: pyproject.toml
cli_helper/: __init__.py  cli.py  cliHelper.py  prompt.py
docs/: about.md
example/simple/: cli.py  sample.py  watch.py
tests/: test_cliHelper.py
