[tool.poetry]
name = "cli_helper"
version = "0.1.0"
description = ""
authors = ["Caspar Trittibach <caspar.trittibach@haag-streit.com>"]
readme = "README.md"
packages = [
    { include = "cli_helper"},
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
watchdog = "^4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
mkdocs = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli-term = "cli_helper.cli:cli"


[tool.pytest.ini_options]
log_cli = 1
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"


