[tool.poetry]
name = "cli_example"
version = "0.1.0"
description = ""
authors = ["Caspar Trittibach <caspar.trittibach@haag-streit.com>"]
readme = "README.md"
packages = [
    { include = "cli_example"},
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
cli_helper = { path = ".." }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

